# aoc2018

./: .gitignore  CMakeLists.txt  README.md
.github/: README.md
day1/: CMakeLists.txt  README.md  main.c
day10/: CMakeLists.txt  README.md  main.c
day11/: CMakeLists.txt  README.md  main.c
day12/: CMakeLists.txt  README.md  main.c
day13/: CMakeLists.txt  README.md  input.in  main.c
day14/: CMakeLists.txt  README.md  input.in  main.c
day15/: CMakeLists.txt
day16/: CMakeLists.txt  README.md  main.c
day17/: CMakeLists.txt
day18/: CMakeLists.txt  main.c
day19/: CMakeLists.txt  README.md  input-reveng  main.c
day2/: CMakeLists.txt  README.md  main.c
day20/: CMakeLists.txt
day21/: CMakeLists.txt
day22/: CMakeLists.txt
day23/: CMakeLists.txt
day24/: CMakeLists.txt
day25/: CMakeLists.txt
day3/: CMakeLists.txt  README.md  input.in  main.c
day4/: CMakeLists.txt  README.md  main.c
day5/: CMakeLists.txt  README.md  main.c
day6/: CMakeLists.txt  README.md  main.c
day7/: CMakeLists.txt  README.md  main.c
day8/: CMakeLists.txt  README.md  main.c
day9/: CMakeLists.txt  main.c
