cmake_minimum_required(VERSION 3.12)
project(AoC C)

add_subdirectory(${PROJECT_SOURCE_DIR}/day1)
add_subdirectory(${PROJECT_SOURCE_DIR}/day2)
add_subdirectory(${PROJECT_SOURCE_DIR}/day3)
add_subdirectory(${PROJECT_SOURCE_DIR}/day4)
add_subdirectory(${PROJECT_SOURCE_DIR}/day5)
add_subdirectory(${PROJECT_SOURCE_DIR}/day6)
add_subdirectory(${PROJECT_SOURCE_DIR}/day7)
add_subdirectory(${PROJECT_SOURCE_DIR}/day8)
add_subdirectory(${PROJECT_SOURCE_DIR}/day9)
add_subdirectory(${PROJECT_SOURCE_DIR}/day10)
add_subdirectory(${PROJECT_SOURCE_DIR}/day11)
add_subdirectory(${PROJECT_SOURCE_DIR}/day12)
add_subdirectory(${PROJECT_SOURCE_DIR}/day13)
add_subdirectory(${PROJECT_SOURCE_DIR}/day14)
add_subdirectory(${PROJECT_SOURCE_DIR}/day16)
add_subdirectory(${PROJECT_SOURCE_DIR}/day18)
add_subdirectory(${PROJECT_SOURCE_DIR}/day19)